# trading-algo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  codeql.yml
cmake/: FindBoost.cmake  FindQuantLib.cmake
src/: CMakeLists.txt  main.cpp
